# docs-to-ai

./: .dockerignore  .env  .env.example  .gitignore  1.setup-python-env.ps1  2.add-docs-to-database-in-python.ps1  2.add_docs_to_database.ps1  2.ingest-docs.ps1  2.scan-all-my-documents-in-python.ps1  3.run-mcp-server-in-python.ps1  DOCKER.md  Dockerfile  EXAMPLE.md  INDEX.md  LICENSE  QUICKSTART.md  QUICK_REF.md  README.md  TECHNICAL_UPDATE.md  TODO.md  TOPICS.md  UPDATE_SUMMARY.md  add_docs_to_database.py  claude_desktop_config.example.json  config.py  docker-addfiles.ps1  docker-compose-websocket.yml  docker-compose.yml  docker-logs.ps1  docker-status.ps1  docker-stop.ps1  docker-tag-and-push-image.ps1  document_processor.py  git-squash-rebase.txt  ingest_documents.py  ingest_pdfs.py  install_deps.ps1  mcp_server.py  newreq2.txt  old_requirements.txt  (+9 more)
.continue/mcpServers/: new-mcp-server.yaml
app/: add_docs_to_database.py  config.py  document_processor.py  download_models.py  file_handler.py  folder_watcher.py  incremental_updater.py  mcp_tools.py  scan_all_my_documents.py  scan_scheduler.py  setup.py  vector_store.py
app/extractors/: __init__.py  csv_extractor.py  docx_extractor.py  excel_extractor.py  html_extractor.py  markdown_extractor.py  pdf_extractor.py  pptx_extractor.py  txt_extractor.py
my-docs/: put-files-here-in-subfolders.txt
