[project]
name = "docs-to-ai"
version = "0.2.0"
description = "A Model Context Protocol (MCP) server that enables LLMs (like Clause or any other LLM that supports MCP) to query your documents using semantic search. Organizes documents by topics based on folder structure. Supports: PDF, Word, Excel, Markdown."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.2.0",
    "fastmcp>=2.12.5",
    "pandas>=2.3.3",
    "pymupdf>=1.26.5",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.1.1",
    "watchdog>=6.0.0",
    "tiktoken>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "python-pptx>=1.0.0",
]
