[project]
name = "docs-to-ai"
version = "0.3.0"
description = "A Model Context Protocol (MCP) server that enables LLMs (like Clause or any other LLM that supports MCP) to query your documents using semantic search. Organizes documents by topics based on folder structure. Supports: PDF, Word, Excel, Markdown."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.1",
    "fastmcp>=3.0.2",
    "pandas>=3.0.1",
    "pymupdf>=1.27.1",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.2.3",
    "watchdog>=6.0.0",
    "tiktoken>=0.12.0",
    "beautifulsoup4>=4.14.3",
    "python-pptx>=1.0.2",
]
